# plugget-qt

./: README.md  plugget_search_widget.py  pyproject.toml  requirements.txt  sample_config.txt
.github/workflows /: python-publish.yml
plugget_qt/: __init__.py
plugget_search_widget/: __init__.py
