[build-system]
requires = ["setuptools", "setuptools-scm"]
#build-backend = "setuptools.build_meta"


[tool.setuptools]
packages = ["plugget_qt"]


[project]
name = "plugget-qt"
authors = [
    {name = "Hannes Delbeke"},
]
description = "a qt widget to search for plugget packages"
readme = "README.md"
requires-python = ">=3.4"
keywords = ["dcc", "pipeline", "qt", "widget", "plugget", "package", "manifest", "search", "installer"]
#license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3.4",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    'importlib-metadata; python_version<"3.4"',
    'plugget',
]

# dynamic = ["version"]
version = "0.0.6"

# [project.optional-dependencies]
# pyside2 = ["PySide2"]

#[project.scripts]
#my-script = "my_package.module:function"

[project.urls]
Homepage = "https://github.com/plugget/plugget-qt"
Documentation = "https://github.com/plugget/plugget-qt"
